# AITK-540-t5-for-NLI-task-testing

./: .gitignore  README.md  main.py  pyproject.toml
data/: queries_with_answers.csv
results/: test_result.csv  test_result.xlsx
src/: classifiers.py  start.py
